--- a/components/input/index.module.sass
+++ b/components/input/index.module.sass
@@ -115,6 +115,7 @@
     perspective: 1000px
     border-bottom-left-radius: 8px
     border-bottom-right-radius: 8px
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.16)
     animation: growDown 300ms ease-in-out forwards
     transform-origin: top center
 
