--- a/components/player/frame/index.module.sass
+++ b/components/player/frame/index.module.sass
@@ -134,3 +134,27 @@
     height: 100%
     background: $gray-900-color
     cursor: pointer
+
+.FRAME_6
+  @extend .FRAME
+
+  &Window
+    margin: 0 auto
+    width: 100%
+    height: 100%
+    background: $gray-900-color
+    cursor: pointer
+
+    &Focused
+      @extend .FRAMEFocused
+
+  &Column
+    width: 20%
+    display: flex
+    justify-content: center
+
+  &MiniWindow
+    width: 100%
+    height: 20%
+    background: $gray-900-color
+    cursor: pointer
