--- a/styles/globals.css
+++ b/styles/globals.css
@@ -154,3 +154,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+video {
+  width: 100%;
+  height: 100%;
+  /* pointer-events: none; */
+  object-fit: cover;
+}
