--- a/styles/globals.css
+++ b/styles/globals.css
@@ -158,6 +158,6 @@ table {
 video {
   width: 100%;
   height: 100%;
-  /* pointer-events: none; */
+  pointer-events: none;
   object-fit: cover;
 }
